--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-future~=0.18.2
 gTTS~=2.3.1
 matplotlib~=3.7.1
 playsound~=1.3.0
@@ -8,4 +7,6 @@ psutil~=5.9.0
 aprslib~=0.7.2
 plotly~=5.14.1
 pandas~=2.0.2
+future~=0.18.2
+mysql-connector-python~=8.1.0
 setuptools~=45.2.0
