--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ crcmod~=1.7
 aprslib~=0.7.2
 matplotlib~=3.7.1
 gTTS~=2.3.1
-playsound~=1.3.0
 # mysql-connector-python~=8.1.0
 networkx~=3.1
 pillow~=11.2.1
 tkintermapview~=1.29
+playsound3~=3.2.8
