fixed: BBS: The BID (Boxcall) is only updated after changing the settings and a program restart.
Results in BID: 000001NOCALL

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ pyserial~=3.4
 crcmod~=1.7
 aprslib~=0.7.2
 matplotlib~=3.7.1
-gTTS~=2.3.1
+gTTS~=2.3.1 # Optional
 # mysql-connector-python~=8.1.0
 networkx~=3.1
 pillow~=11.2.1
